<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item android:id="@+id/profile"
        android:title="@string/profile_details"
        android:icon="@drawable/user"
        />

    <item android:id="@+id/website"
        android:title="@string/government_websites_for_help"
        android:icon="@drawable/portal"
        />

    <item android:id="@+id/self_defence"
        android:title="@string/self_defence"
        android:icon="@drawable/shield"/>

    <item android:id="@+id/add_contact"
        android:title="@string/add_contact"
        android:icon="@drawable/add_contact"/>


    <item
        android:title="@string/title"

        >
        <menu>

            <item android:id="@+id/logout"
                android:title="@string/logout"
                app:showAsAction="always"
                android:icon="@drawable/logout_logo"/>

        </menu>

    </item>


</menu>