<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/home"
        android:title="@string/home"

        android:icon="@drawable/home_icon_dasboard"/>

    <item android:id="@+id/health"
        android:title="@string/medical_help"

        android:icon="@drawable/medical_helpline"/>

    <item android:id="@+id/police"
        android:title="@string/police_help"

        android:icon="@drawable/police_helpline_123"/>

    <item android:id="@+id/map"
        android:title="@string/map"

        android:icon="@drawable/map_854929"/>

    <item android:id="@+id/guidelines"
        android:title="@string/guidelines"

        android:icon="@drawable/guide_2039804"/>



</menu>