<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/sky_blue"
    tools:context=".LoginAdmin">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieAnimationViewAdmin"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/admin_a" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="40dp"
            app:cardElevation="20dp">

               <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:padding="24dp"
                android:background="@drawable/lavender_border">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_admin"
                    android:textAlignment="center"
                    android:textColor="@color/light_blue"
                    android:textSize="36sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/your_Phone_number_or_email"
                    android:textStyle="bold"
                    android:textColor="@color/light_blue"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/AdminLogPhone"
                    android:background="@drawable/lavender_border"
                    android:layout_marginTop="12dp"
                    android:drawableStart="@drawable/baseline_admin_panel_settings_24"
                    android:padding="8dp"
                    android:hint="@string/Phone_number_admin"
                    android:inputType="number"
                    android:drawablePadding="8dp"
                    android:textColor="#a2a4b5"
                    tools:ignore="TextFields" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/Your_Password"
                    android:textStyle="bold"
                    android:textColor="@color/light_blue"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/AdminLogPassword"
                    android:background="@drawable/lavender_border"
                    android:layout_marginTop="12dp"
                    android:padding="8dp"
                    android:drawableStart="@drawable/lock"
                    android:hint="@string/Passwords"
                    android:inputType="textPassword"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/AdminLogForgetPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Forget_Password"
                    android:textColor="@color/light_blue"
                    android:layout_marginTop="12dp"
                    android:textAlignment="viewEnd"
                    android:layout_marginEnd="12dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/LogIn"
                    android:textStyle="bold"
                    android:id="@+id/AdminLogBtn"
                    android:backgroundTint="@color/light_blue"
                    android:onClick="loginAdmin"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    app:cornerRadius ="20dp"/>

                <TextView
                    android:id="@+id/AdminRegisterRedirect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_account_register"
                    android:onClick="goRegisterAdmin"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/light_blue"/>


                <com.google.android.gms.common.SignInButton
                    android:id="@+id/bt_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"

                    android:layout_marginBottom="12dp"
                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>
</LinearLayout>
</ScrollView>
</LinearLayout>