<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterAdmin">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieAnimationViewAdmin"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/regis"
                tools:ignore="MissingConstraints" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="20dp"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:padding="24dp"
                    android:background="@drawable/lavender_border">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register_admin"
                        android:textAlignment="center"
                        android:textColor="@color/light_blue"
                        android:layout_marginBottom="20dp"
                        android:textSize="36sp"
                        android:textStyle="bold"/>


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/AdminRegName"
                        android:background="@drawable/lavender_border"
                        android:layout_marginTop="12dp"
                        android:padding="8dp"
                        android:hint="@string/full_name"
                        android:inputType="text"
                        android:drawableStart="@drawable/baseline_person_24"
                        android:drawablePadding="8dp"
                        android:textColor="@color/black"
                        tools:ignore="Autofill" />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                            android:id="@+id/AdminRegPhone"
                        android:background="@drawable/lavender_border"
                        android:layout_marginTop="12dp"
                        android:inputType="phone"
                        android:padding="8dp"
                        android:hint="@string/phone_number"
                        android:drawableStart="@drawable/baseline_phone_android_24"
                        android:drawablePadding="8dp"
                        android:textColor="@color/black"
                        tools:ignore="Autofill" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/AdminRegEmail"
                        android:background="@drawable/lavender_border"
                        android:layout_marginTop="12dp"
                        android:padding="8dp"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email"
                        android:drawableStart="@drawable/baseline_email_24"
                        android:drawablePadding="8dp"
                        android:textColor="@color/black"
                        tools:ignore="Autofill" />

                    <EditText
                        android:id="@+id/AdminRegPassword"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/lavender_border"
                        android:drawableLeft="@drawable/baseline_key_24"
                        android:drawablePadding="8dp"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        tools:ignore="Autofill" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/AdminRegCon_Password"
                        android:background="@drawable/lavender_border"
                        android:layout_marginTop="12dp"
                        android:padding="8dp"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:drawableStart="@drawable/baseline_lock_24"
                        android:drawablePadding="8dp"
                        android:textColor="@color/black"
                        tools:ignore="Autofill" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="@string/register"
                        android:onClick="registerAdmin"
                        android:id="@+id/AdminRegBtn"
                        android:textSize="18sp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/light_blue"
                        app:cornerRadius ="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/AdminRegLoginRedirect"
                        android:text="@string/already_an_user_login"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:layout_marginTop="10dp"
                        android:onClick="goLoginAdmin"
                        android:textSize="18sp"
                        android:textColor="@color/light_blue"/>

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/bt_sign_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        />



                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>